MDEV-37268 ER_NOT_KEYFILE or assertion failure upon REPLACE into table with unique hash under READ-COMMITTED

followup for 9703c90712f3 (MDEV-37199 UNIQUE KEY USING HASH accepting duplicate records)

don't forget to rnd_init()/rnd_end() around rnd_pos()